--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -16,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "graphql": "^16.6.0",
     "lucide-react": "^0.241.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
@@ -24,9 +26,15 @@
     "react-hook-form": "^7.44.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "urql": "^4.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/import-types-preset": "^2.2.6",
+    "@graphql-codegen/typescript": "^4.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.0",
+    "@graphql-codegen/typescript-urql": "^3.7.3",
     "@rocketseat/eslint-config": "^1.2.0",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
