--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -18,6 +18,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "lucide-react": "^0.241.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
@@ -26,10 +27,15 @@
     "react-hook-form": "^7.44.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "urql": "^4.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^5.0.0",
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/client-preset": "^4.0.0",
+    "@graphql-codegen/typescript": "^4.0.0",
+    "@graphql-codegen/typescript-graphql-request": "^5.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.0",
     "@rocketseat/eslint-config": "^1.2.0",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
