--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen"
+    "codegen": "graphql-codegen",
+    "codegen-watch": "graphql-codegen --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -18,6 +19,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "lucide-react": "^0.241.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
@@ -29,6 +31,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/client-preset": "^4.0.1",
     "@rocketseat/eslint-config": "^1.2.0",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
