--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "graphql-request": "^6.1.0",
     "lucide-react": "^0.241.0",
     "next": "13.4.4",
+    "next-urql": "^5.0.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-is": "^18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3",
+    "urql": "^4.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
