--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.4",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
+    "immer": "^10.0.2",
     "lucide-react": "^0.241.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
