--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "sharp": "^0.32.1",
     "stripe": "^12.10.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3",
